--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ const startBtn = document.createElement("button");
 startBtn.innerHTML = "Start listening";
 const result = document.createElement("div");
 const processing = document.createElement("p");
-document.write("<body><h1>J.O.H.N ALPHA V1.2</h1><p>Give it a try with 'hello', 'how are you', 'what's your name', 'what time is it', 'What date is it', 'you want the truth', 'Good Morning', 'Good Afternoon', 'GoodNight', 'what version are you', 'tell me a joke', 'execute order 66', 'tell me your creator', 'Open YouTube', 'Open YouTube music', 'Open Wikipedia', 'Open Outlook', 'Open Gmail', and 'goodbye', or ask it a question e.g 69 x 100 or, who was Abraham Lincoln! ... J.O.H.N and J.O.H.N PLuS are squ:rre/ c0mp productions created in 2021 </p></body>");
+document.write("<body><h1>J.O.H.N</h1><p>Give it a try with 'hello', 'how are you', 'what's your name', 'what time is it', 'What date is it', 'you want the truth', 'Good Morning', 'Good Afternoon', 'GoodNight', 'what version are you', 'tell me a joke', 'execute order 66', 'tell me your creator', 'Open YouTube', 'Open YouTube music', 'Open Wikipedia', 'Open Outlook', 'Open Gmail', and 'goodbye', or ask it a question e.g 69 x 100 or, who was Abraham Lincoln! ... J.O.H.N and J.O.H.N PLuS are squ:rre/ c0mp productions created in 2021 </p></body>");
 document.body.append(startBtn);
 document.body.append(result);
 document.body.append(processing);
