--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ const startBtn = document.createElement("button");
 startBtn.innerHTML = "Start listening";
 const result = document.createElement("div");
 const processing = document.createElement("p");
-document.write("<body><img src="John.png" alt="J.O.H.N"><p> Hello How may I help you?</p></body>");
+document.write("<body><img src="John.png"><p> Hello How may I help you?</p></body>");
 document.body.append(startBtn);
 document.body.append(result);
 document.body.append(processing);
